--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <!-- --------start header--------- -->
+    
     <header>
         <nav>
             <div class="influencer-menu">
@@ -29,15 +30,14 @@
                     <a href=""><i class="fas fa-shopping-cart"></i></a>
                 </div>
             </div>
-        </nav>
+        </nav>       
     </header>
     <main>
         <section class="influencer-items">
             <div class="start-info">
                 <h1>Start your Journey as
                     Influencer</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus
-                    faucibus.</p>
+                <p>To a certain degree, influence marketing is like taking a trip, or what I call the influencer journey.</p>
                 <div class="link-button">
                     <a href="">Preebook now</a>
                     <a href=""><i class="fas fa-arrow-right"></i></a>
@@ -86,17 +86,17 @@
                     </div>
                     <div class="prodact">
                         <div class="tumbnail">
-                            <img src="images/action.png" alt="">
+                            <img src="images/mic.png" alt="">
                         </div>
                         <div class="prodac-details">
-                            <h3>Flex Tripod</h3>
-                            <h5>$50.48</h5>
+                            <h3>microphone</h3>
+                            <h5>$120</h5>
                             <div class="star-info">
                                 <a href=""><i class="fas fa-star"></i></a>
                                 <a href=""><i class="fas fa-star"></i></a>
                                 <a href=""><i class="fas fa-star"></i></a>
                                 <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.99</span>
+                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.60   </span>
                             </div>
                             <p>Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
@@ -104,17 +104,107 @@
                     </div>
                     <div class="prodact">
                         <div class="tumbnail">
-                            <img src="images/action.png" alt="">
+                            <img src="images/airpod.png" alt="">
                         </div>
                         <div class="prodac-details">
-                            <h3>Flex Tripod</h3>
-                            <h5>$50.48</h5>
+                            <h3>Airbuds</h3>
+                            <h5>$100</h5>
                             <div class="rating-info">
                                 <a href=""><i class="fas fa-star rate"></i></a>
                                 <a href=""><i class="fas fa-star rate"></i></a>
                                 <a href=""><i class="fas fa-star rate"></i></a>
                                 <a href=""><i class="fas fa-star rate"></i></a>
-                                <a href=""><i class="fas fa-star-half-alt rate"></i></a><span>4.99</span>
+                                <a href=""><i class="fas fa-star-half-alt rate"></i></a><span>4.65</span>
+                            </div>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="prodact">
+                        <div class="tumbnail">
+                            <img src="images/drone.png" alt="">
+                        </div>
+                        <div class="prodac-details">
+                            <h3>Drone</h3>
+                            <h5>$980</h5>
+                            <div class="star-info">
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.70</span>
+                            </div>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="prodact">
+                        <div class="tumbnail">
+                            <img src="images/lights.png" alt="">
+                        </div>
+                        <div class="prodac-details">
+                            <h3>Light Setup</h3>
+                            <h5>$1200</h5>
+                            <div class="star-info">
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.75</span>
+                            </div>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="prodact">
+                        <div class="tumbnail">
+                            <img src="images/setup.png" alt="">
+                        </div>
+                        <div class="prodac-details">
+                            <h3>Photoshoot set</h3>
+                            <h5>$820</h5>
+                            <div class="star-info">
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.80</span>
+                            </div>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="prodact">
+                        <div class="tumbnail">
+                            <img src="images/camera.png" alt="">
+                        </div>
+                        <div class="prodac-details">
+                            <h3>Vlogging Camera</h3>
+                            <h5>$1800</h5>
+                            <div class="star-info">
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.85</span>
+                            </div>
+                            <p>Wordwide shifting <br> available <br>
+                                Buyers protection possible!</p>
+                        </div>
+                    </div>
+                    <div class="prodact">
+                        <div class="tumbnail">
+                            <img src="images/single-light.png" alt="">
+                        </div>
+                        <div class="prodac-details">
+                            <h3>Green Screen</h3>
+                            <h5>$29</h5>
+                            <div class="star-info">
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star"></i></a>
+                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.90</span>
                             </div>
                             <p>Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
@@ -125,104 +215,14 @@
                             <img src="images/action.png" alt="">
                         </div>
                         <div class="prodac-details">
-                            <h3>Flex Tripod</h3>
-                            <h5>$50.48</h5>
+                            <h3>Action Camera</h3>
+                            <h5>$380</h5>
                             <div class="star-info">
                                 <a href=""><i class="fas fa-star"></i></a>
                                 <a href=""><i class="fas fa-star"></i></a>
                                 <a href=""><i class="fas fa-star"></i></a>
                                 <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.99</span>
-                            </div>
-                            <p>Wordwide shifting <br> available <br>
-                                Buyers protection possible!</p>
-                        </div>
-                    </div>
-                    <div class="prodact">
-                        <div class="tumbnail">
-                            <img src="images/action.png" alt="">
-                        </div>
-                        <div class="prodac-details">
-                            <h3>Flex Tripod</h3>
-                            <h5>$50.48</h5>
-                            <div class="star-info">
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.99</span>
-                            </div>
-                            <p>Wordwide shifting <br> available <br>
-                                Buyers protection possible!</p>
-                        </div>
-                    </div>
-                    <div class="prodact">
-                        <div class="tumbnail">
-                            <img src="images/action.png" alt="">
-                        </div>
-                        <div class="prodac-details">
-                            <h3>Flex Tripod</h3>
-                            <h5>$50.48</h5>
-                            <div class="star-info">
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.99</span>
-                            </div>
-                            <p>Wordwide shifting <br> available <br>
-                                Buyers protection possible!</p>
-                        </div>
-                    </div>
-                    <div class="prodact">
-                        <div class="tumbnail">
-                            <img src="images/action.png" alt="">
-                        </div>
-                        <div class="prodac-details">
-                            <h3>Flex Tripod</h3>
-                            <h5>$50.48</h5>
-                            <div class="star-info">
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.99</span>
-                            </div>
-                            <p>Wordwide shifting <br> available <br>
-                                Buyers protection possible!</p>
-                        </div>
-                    </div>
-                    <div class="prodact">
-                        <div class="tumbnail">
-                            <img src="images/action.png" alt="">
-                        </div>
-                        <div class="prodac-details">
-                            <h3>Flex Tripod</h3>
-                            <h5>$50.48</h5>
-                            <div class="star-info">
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.99</span>
-                            </div>
-                            <p>Wordwide shifting <br> available <br>
-                                Buyers protection possible!</p>
-                        </div>
-                    </div>
-                    <div class="prodact">
-                        <div class="tumbnail">
-                            <img src="images/action.png" alt="">
-                        </div>
-                        <div class="prodac-details">
-                            <h3>Flex Tripod</h3>
-                            <h5>$50.48</h5>
-                            <div class="star-info">
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star"></i></a>
-                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.99</span>
+                                <a href=""><i class="fas fa-star-half-alt"></i></a><span>4.98</span>
                             </div>
                             <p>Wordwide shifting <br> available <br>
                                 Buyers protection possible!</p>
@@ -232,10 +232,40 @@
                 <div class="see-more">
                     <p>See More</p>
                     <a href=""><i class="fas fa-arrow-right see"></i></a>
-                </div>
+                </div>   
             </section>
         </section>
+        <section class="featured">
+            <div class="feature-img">
+                <img src="images/gear.png" alt="">
+            </div>
+            <feature-details>      
+              <div class="fea-inf">
+                <h2>Featured products at one place</h2>
+                <p>A thoughtful, deliberate blogging strategy can help you nurture customer relationships, generate recurring inbound traffic, and give you a way to promote new products and services while building your brand.</p>
+              </div>
+              <div class="join-button">
+                  <a href="">Join Now<i class="fas fa-arrow-right gap"></i></a>
+              </div>
+            </feature-details>
+        </section>
     </main>
+ 
+    <footer>
+       <div class="end-details">
+           <div class="end-influence">
+               <h3>Influencer products</h3>
+               <p>Copyright © 2020  influencer products</p>
+               <p id="all-right">All rights reserved</p>
+           </div>
+           <div class="end-icon">
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href=""><i class="fab fa-tiktok"></i></a>
+           </div>
+       </div>          
+    </footer>
 </body>
 
 </html>
